k8s/payment-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-worker
  namespace: NAMESPACE_PLACEHOLDER
  labels:
    app: payment-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-worker
  template:
    metadata:
      labels:
        app: payment-worker
    spec:
      containers:
        - name: payment-worker
          image: honey-store/payment-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
