k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honey-store-ingress
  namespace: NAMESPACE_PLACEHOLDER
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: INGRESS_CLASS_PLACEHOLDER
  tls:
    - hosts:
        - FRONTEND_HOST_PLACEHOLDER
        - DASHBOARD_HOST_PLACEHOLDER
        - API_HOST_PLACEHOLDER
      secretName: TLS_SECRET_PLACEHOLDER
  rules:
    - host: FRONTEND_HOST_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: DASHBOARD_HOST_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-dashboard
                port:
                  number: 80
    - host: API_HOST_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-api
                port:
                  number: 8080
